--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,6 +1,7 @@
-@import "./shared/Button/Button";
 @import "./shared/Card/Card";
 @import "./shared/Dropdown/Dropdown";
 @import "./shared/Radiobutton/Radiobutton";
+@import "./shared/Table/Table";
 @import "./layouts/Sidebar/Sidebar";
 @import "./layouts/Layout/Layout";
+
