--- a/src/components/layouts/Sidebar/Sidebar.scss
+++ b/src/components/layouts/Sidebar/Sidebar.scss
@@ -77,3 +77,13 @@ $icon-size: 35px;
     overflow: hidden;
   }
 }
+.user {
+  margin: 2rem;
+  padding: 2rem;
+  background: rgba(255, 255, 255, 0.22);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8.5px);
+  -webkit-backdrop-filter: blur(8.5px);
+  border: 1px solid rgba(255, 255, 255, 0.33);
+}
