--- a/src/components/shared/Card/Card.scss
+++ b/src/components/shared/Card/Card.scss
@@ -10,7 +10,10 @@ $purple: rgba(108, 99,  255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.33);
 
   backdrop-filter: blur(15px);
-  background: rgba(255,255,255, 0.4);
+  background: rgba(255,255,255, 0.6);
   box-shadow: 0 35px 68px 0 $purple, inset 0 -8px 16px 0 $pink;
-
+}
+.wrong {
+  backdrop-filter: blur(20px);
+  background: rgba(108, 99,  255, 0.3);
 }
